@@ -12,6 +12,7 @@ void allocMemory(void) {
      * are all allocated and defined in readData (process_input.c),
      * before this function is called
      */
+
     int N = SP->n;
 
     /* triangle inequalities */
@@ -31,7 +32,7 @@ void allocMemory(void) {
     alloc_matrix(Z, N, double);
     alloc_vector(X_bundle, N * N * MaxBundle, double);
     alloc_matrix(X_test, N, double);
-    alloc_vector(gamma, MaxTriIneqAdded + MaxPentIneqAdded + MaxHeptaIneqAdded, double);
+    alloc_vector(dual_gamma, MaxTriIneqAdded + MaxPentIneqAdded + MaxHeptaIneqAdded, double);
     alloc_vector(dgamma, MaxTriIneqAdded + MaxPentIneqAdded + MaxHeptaIneqAdded, double);
     alloc_vector(gamma_test, MaxTriIneqAdded + MaxPentIneqAdded + MaxHeptaIneqAdded, double);
     alloc_vector(lambda, MaxBundle, double);
@@ -62,7 +63,7 @@ void freeMemory(void) {
     free(Z);
     free(X_bundle);
     free(X_test);
-    free(gamma);
+    free(dual_gamma);
     free(dgamma);
     free(gamma_test);
     free(lambda);
